--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,4 @@
-.header{
+.header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -7,12 +7,14 @@
     padding: 10px;
     background-image: linear-gradient(15deg, rgb(245, 247, 250) 16%, rgb(228, 232, 238) 100%);
 }
-.ham-icon{
+
+.ham-icon {
     font-size: x-large;
     margin: 5px;
 
 }
-.header > span:last-child {
+
+.header>span:last-child {
     font-size: medium;
     color: white;
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
@@ -20,8 +22,64 @@
     margin: 0 5px;
 }
 
-.vstock-logo{
+.vstock-logo {
     font-size: xx-large;
     letter-spacing: 2px;
 }
 
+input[type='text'] {
+    font-family: "Ubuntu";
+    font-style: normal;
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 800;
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: #000000;
+    /* position: relative; */
+    padding: 10px 15px;
+    border-radius: 10px;
+    display: flex;
+    box-shadow: rgb(50 50 93 / 25%) 0px 13px 27px -5px, rgb(0 0 0 / 30%) 0px 8px 16px -8px;
+    background-color: white;
+    margin: 10px 0;
+    outline: none;
+    transition: all 0.8s;
+    
+}
+input[type='text']:hover{
+    border: none;
+    outline: none;
+    transform: scale(1.03);
+}
+
+.search {
+    padding: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 700px) {
+    .search{
+        display: flex;
+        flex-direction: column;
+    }
+    .search > button {
+        margin: 20px;
+    }
+}
+
+.search > button {
+    padding: 10px 40px;
+}
+
+.model-overlay-categories{
+    display: flex;
+    flex-wrap: wrap;
+}
+.model-overlay-categories > Checkbox {
+    margin: 20px;
+}
