--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,13 +4,20 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    padding: 10px;
-    background-image: linear-gradient(15deg, rgb(245, 247, 250) 16%, rgb(228, 232, 238) 100%);
+    padding: 10px 40px;
+    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+}
+
+@media screen and (max-width: 720px) {
+    .header {
+        padding: 10px;
+    }
 }
 
 .ham-icon {
     font-size: x-large;
     margin: 5px;
+    font-weight: 1000;
 
 }
 
@@ -19,7 +26,7 @@
     color: white;
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
     padding: 8px;
-    margin: 0 5px;
+    margin: 0 5px 0 0;
 }
 
 .vstock-logo {
@@ -84,4 +91,9 @@ input[type='text']:hover{
     margin: 20px;
 }
 
+
+.footer {
+    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    margin-top: 20px;
+}
 
