state management added for categories module

--- a/src/styles/Images.css
+++ b/src/styles/Images.css
@@ -2,6 +2,8 @@
     position: relative;
     display: inline-flex;
     margin: 7px;
+    height: 400px;
+    max-height: 400px;
 }
 
 .image-actions{
