--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,3 +56,10 @@
 .button-scheme{
   background-color: black;
 }
+
+.loader {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
