--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 30px;
 }
 
 .image-details{
@@ -32,11 +32,12 @@
 
 .more-info{
     margin: 40px 0px;
+    padding-top: 10px;
     padding-bottom: 20px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 15px 45px, rgba(0, 0, 0, 0.12) 0px 0px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 10px 10px, rgba(0, 0, 0, 0.09) 0px 0px 5px;
 }
 
 .more-details{
-    margin: 50px;
+    margin: 40px 50px;
 }
